feat: prepare routes to standard api
